--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -3,7 +3,7 @@
 .container {
     position: relative;
     background-color: rgba(12, 12, 12, 0.6);
-    box-shadow: 0 8px 16px #000000b3;
+    box-shadow: 0 8px 16px #32323c;
     border-radius: 15px;
     padding: 73px;
     margin-top: 129px;
