--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -23,6 +23,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 400px;
+    gap: 40px;
     margin: auto;
 }
 
@@ -46,10 +47,18 @@
 }
 
 .formGroup input {
+    border: none;
+    border-radius: 5px;
+    background: #32323c;
     width: 600px;
+    color: #a0a0a0;
 }
 
 .formGroupMessage textarea {
+    border: none;
+    color: #a0a0a0;
+    border-radius: 5px;
+    background: #32323c;
     height: 150px;
     width: 600px;
 }
