--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,19 +2,15 @@
 
 .container {
     color: var(--color-text);
-    margin-top: 120px;
-    /* Gradiente de abajo hacia arriba */
-    background-image: linear-gradient(
-        to top,
-        var(--color-secondary),
-        var(--color-bg)
-    );
+    margin-top: 80px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     width: 100vw;
     padding: 58px 10%;
+
     gap: 10px;
+    border-top: #32323c solid;
 }
 
 .links {
