--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
     font-family: 'Raleway, Oufit, Arial, Helvetica, sans-serif';
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     padding: 0;
