--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,13 +4,32 @@
     color: var(--color-text);
     margin-top: 80px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     width: 100vw;
     padding: 58px 10%;
 
     gap: 10px;
     border-top: #32323c solid;
+}
+
+.container ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-bottom: 50px;
+}
+
+.bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: -25px;
+}
+
+.linkable {
+    cursor: pointer;
 }
 
 .links {
@@ -42,7 +61,8 @@
 }
 
 @media screen and (max-width: 830px) {
-    .container {
+    .container ul {
+        display: flex;
         flex-direction: column;
         gap: 23px;
     }
@@ -61,5 +81,14 @@
         font-size: 10px;
         font-weight: 400;
         letter-spacing: 1.5px;
+    }
+
+    .bottom {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: -25px;
+        gap: 10px;
+        font-size: 10px;
     }
 }
