--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -11,12 +11,13 @@
     background-color: #32323c;
     padding: 50px;
     z-index: 1000;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
+    border: solid var(--color-primary);
     opacity: 1;
 }
 
 .modal p {
-    font-size: 35px;
+    font-size: 25px;
     padding-left: 10px;
     padding-right: 10px;
     font-family: var(--font-roboto);
