--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -88,9 +88,15 @@ textarea {
     border-radius: 4px;
 }
 
+input:focus,
+textarea:focus {
+    outline: 2px solid var(--color-primary);
+    border-radius: 4px;
+}
+
 button {
     padding: 10px;
-    background-color: #1c3157;
+    background-color: var(--color-primary);
     color: white;
     border: none;
     border-radius: 10px;
@@ -103,8 +109,12 @@ button {
     box-shadow: 0 8px 16px #000000b3;
 }
 
+button:active {
+    transform: scale(1.2);
+}
+
 button:hover {
-    background-color: #0056b3;
+    background-color: #576bbca8;
 }
 
 button:disabled {
