--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -48,7 +48,11 @@
     position: absolute;
     width: 0.75rem;
     height: 0.75rem;
-    background-image: linear-gradient(225deg, #1c3157 50%, #2b86c5 50%);
+    background-image: linear-gradient(
+        225deg,
+        #576bbca8 35%,
+        var(--color-primary) 65%
+    );
     border-radius: 50%;
     left: -7px;
     margin-top: 0.375rem;
