--- a/src/components/MouseFollower/MouseFollower.module.css
+++ b/src/components/MouseFollower/MouseFollower.module.css
@@ -1,3 +1,5 @@
+@import '../../vars.css';
+
 body {
     height: 100vh;
     margin: 0;
@@ -12,6 +14,23 @@ body {
     pointer-events: none;
     transition: transform 0.1s ease;
     z-index: 998;
+}
+
+.tooltip {
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #13151a59;
+    backdrop-filter: blur(4px);
+    /* background-color: var(--color-bg); */
+    padding: 5px 10px;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);
+    white-space: nowrap;
+    z-index: 10;
+    pointer-events: none;
+    font-size: 20px;
 }
 
 @media screen and (max-width: 830px) {
