--- a/src/components/Technologies/Technologies.module.css
+++ b/src/components/Technologies/Technologies.module.css
@@ -1,11 +1,11 @@
 .container {
     color: var(--color-text);
-    margin-top: 8rem;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 8rem auto 1rem auto;
+    width: 60%;
+    text-align: center;
 }
 
-.container h2 {
+.title {
     display: flex;
     justify-content: center;
     font-family: var(--font-roboto);
@@ -13,12 +13,45 @@
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
-    margin-bottom: 2%;
+    padding: 5px;
 }
 
-.container p {
+.techItems {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+}
+
+.techItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.techItemText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
+}
+
+.techItemText h3 {
+    display: flex;
+    align-items: center;
+    gap: 5px;
     font-size: 25px;
-    text-align: center;
+    font-weight: 600;
+    margin: 0;
+}
+
+.techItemText p {
+    font-size: 25px;
+    margin: 5px 0 0;
+    color: #bababa;
 }
 
 .carouselContainer {
@@ -60,8 +93,28 @@
 }
 
 @media screen and (max-width: 830px) {
-    .container p {
+    .container {
+        width: 90%;
+        margin-bottom: 0;
+    }
+
+    .techItemText {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    .techItemText h3 {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        font-size: 17px;
+        font-weight: 600;
+    }
+
+    .techItemText p {
         font-size: 15px;
-        text-align: center;
+        text-align: start;
     }
 }
