--- a/src/components/Technologies/Technologies.module.css
+++ b/src/components/Technologies/Technologies.module.css
@@ -1,7 +1,7 @@
 .container {
     color: var(--color-text);
     margin: 8rem auto 1rem auto;
-    width: 60%;
+    width: 80%;
     text-align: center;
 }
 
@@ -17,8 +17,8 @@
 }
 
 .techItems {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
     gap: 20px;
     list-style: none;
     padding: 0;
@@ -35,23 +35,27 @@
 .techItemText {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding-left: 0;
+    align-items: flex-start;
+    justify-content: center;
+    font-family: var(--font-roboto);
 }
 
 .techItemText h3 {
     display: flex;
-    align-items: center;
-    gap: 5px;
+    align-items: flex-start;
+    gap: 10px;
     font-size: 25px;
-    font-weight: 600;
+    font-weight: 500;
     margin: 0;
 }
 
 .techItemText p {
+    display: flex;
     font-size: 25px;
     margin: 5px 0 0;
+    font-weight: 300;
     color: #bababa;
+    text-align: start;
 }
 
 .carouselContainer {
@@ -98,19 +102,28 @@
         margin-bottom: 0;
     }
 
+    .techItems {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+        list-style: none;
+        padding: 0;
+    }
+
     .techItemText {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        /* align-items: flex-start; */
         justify-content: center;
     }
 
     .techItemText h3 {
         display: flex;
         align-items: center;
+        justify-content: left;
         gap: 5px;
         font-size: 17px;
-        font-weight: 600;
+        font-weight: 400;
     }
 
     .techItemText p {
