--- a/src/components/Technologies/Technologies.module.css
+++ b/src/components/Technologies/Technologies.module.css
@@ -54,7 +54,7 @@
     font-size: 25px;
     margin: 5px 0 0;
     font-weight: 300;
-    color: #bababa;
+    color: var(--color-text-secondary);
     text-align: start;
 }
 
@@ -113,7 +113,6 @@
     .techItemText {
         display: flex;
         flex-direction: column;
-        /* align-items: flex-start; */
         justify-content: center;
     }
 
