--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -76,7 +76,7 @@
     position: relative;
     z-index: 0;
     border-radius: 15px;
-    max-width: 75%;
+    max-width: 40%;
 }
 
 .aboutItemButton img {
@@ -188,6 +188,10 @@
         font-size: 15px;
         padding-left: 10px;
         padding-right: 10px;
+    }
+
+    .aboutItemButton {
+        max-width: 75%;
     }
 
     .aboutItemButton p {
