--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -5,15 +5,17 @@
     flex-direction: column;
     border-radius: 10px;
     background-color: rgba(12, 12, 12, 0.6);
-    box-shadow: 0 0 16px black;
-    padding: 18px 24px;
-    max-width: 345px;
+    box-shadow: 0 0 5px var(--color-primary);
+    padding: 1rem;
+    width: 25rem;
 }
 
 .imgContainer {
-    width: 15rem;
+    width: 100%;
     height: 10rem;
-    margin-bottom: 26px;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .image {
@@ -21,6 +23,11 @@
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+
+.image:hover {
+    transform: scale(1.05);
 }
 
 .title {
@@ -28,45 +35,6 @@
     font-weight: 700;
     font-family: var(--font-roboto);
     color: var(--color-text-secondary);
-}
-
-.description {
-    margin-top: 6px;
-    font-size: 25px;
-    font-weight: 400;
-}
-
-.skills {
-    width: 100%;
-    margin-top: 14px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 6px;
-    list-style: none;
-}
-
-.skill {
-    font-size: 25px;
-    font-weight: 400;
-    border-radius: 100px;
-    background: var(--color-dark);
-    padding: 2px 22px;
-}
-
-.links {
-    width: 100%;
-    margin-top: 26px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.link {
-    text-decoration: none;
-    color: var(--color-text);
-    font-size: 30px;
-    font-weight: 600;
-    border-radius: 100px;
-    background: var(--color-primary);
-    padding: 1px 22px;
+    margin: 0;
+    text-align: center;
 }
