--- a/src/components/Projects/ProjectModal.module.css
+++ b/src/components/Projects/ProjectModal.module.css
@@ -16,33 +16,46 @@
 
 .modalContent {
     background: var(--color-bg);
-    padding: 50px;
+    padding: 30px;
     border-radius: 10px;
     width: 50%;
-    height: 50%;
+    height: 90%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: var(--color-text-secondary);
     border: solid var(--color-primary);
+    border-width: 1px;
 }
 
-.modalContent h3 {
+.modalHeader {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: solid var(--color-primary);
+    border-width: 1px;
+}
+
+.modalHeader h3 {
     font-family: var(--font-roboto);
-    gap: 10px;
     font-size: 25px;
-    font-weight: 500;
-    margin: 0;
+    margin-bottom: 5px;
+}
+
+.closeIcon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
 
 .description {
     display: flex;
-    font-size: 25px;
-    margin: 5px 0 0;
-    font-weight: 300;
+    font-size: 20px;
+    margin-top: 15px;
+    font-weight: 100;
     font-family: var(--font-roboto);
     color: var(--color-text-secondary);
     padding-bottom: 25px;
@@ -51,17 +64,33 @@
 
 .modalContent img {
     width: 90%;
-    height: 60%;
+    height: 50%;
     object-fit: cover;
     margin-bottom: 15px;
 }
 
-.modalContent ul {
+.modalBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.modalFooter {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-top: solid var(--color-primary);
+    border-width: 1px;
+    width: 100%;
+}
+
+.modalContent ul {
     list-style: none;
-    padding: 5px;
-    margin-bottom: 15px;
+    padding: 20px;
 }
 
 .skills {
@@ -72,27 +101,23 @@
     height: 100%;
 }
 
-.modalContent a {
-    color: var(--color-primary);
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 25px;
+.skills img {
+    padding: 0 15px;
+    height: 100%;
 }
 
 .links {
     display: flex;
-    gap: 20px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    padding: 10px 0;
+    margin-top: auto;
 }
 
-.modalContent a:hover {
-    text-decoration: underline;
-}
-
-.closeIcon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+.links a {
+    width: 100px;
 }
 
 .modalContent button {
@@ -112,20 +137,19 @@
     width: 50px;
     height: 50px;
     padding: 10px;
-    border: solid var(--color-primary);
-    border-radius: 50%;
-    font-size: 25px;
+    font-size: 60px;
     text-align: center;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     color: var(--color-text-secondary);
-    background: var(--color-bg);
-    transition: transform 0.4s ease;
+    background: transparent;
+    /*     transition: transform 0.4s ease; */
 }
 
 .navigationButton:hover {
     transform: scale(1.2);
+    background: #1a1a1a;
 }
 
 .prevNavigation {
@@ -136,6 +160,83 @@
     right: -8%;
 }
 
-.animate {
-    opacity: 0.5; /* Cambia esto a lo que desees para la animación */
+@media screen and (max-width: 830px) {
+    .modalContent {
+        width: 85%;
+        height: 95%;
+        padding: 25px;
+    }
+
+    .modalContent img {
+        width: 90%;
+        height: auto;
+        object-fit: cover;
+        margin-bottom: 15px;
+    }
+
+    .description {
+        font-size: 15px;
+        text-align: center;
+        padding: 0 15px;
+    }
+
+    .links a {
+        width: 60px;
+    }
+
+    .modalFooter {
+        max-height: 60px;
+    }
+
+    .modalContent ul {
+        list-style: none;
+        padding: 15px;
+    }
+
+    .skills {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        height: 100%;
+    }
+
+    .skills img {
+        padding: 0 5px;
+        height: 100%;
+    }
+
+    .skills p {
+        display: none;
+    }
+
+    .navigationButton {
+        display: flex;
+        position: absolute;
+        top: 45%;
+        width: 50px;
+        height: 50px;
+        padding: 10px;
+        border: none;
+        font-size: 20px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        color: var(--color-text-secondary);
+        background: transparent;
+    }
+
+    .navigationButton:hover {
+        transform: scale(1);
+        background: transparent;
+    }
+
+    .prevNavigation {
+        left: -12%;
+    }
+
+    .nextNavigation {
+        right: -12%;
+    }
 }
