--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -3,21 +3,17 @@
 .container {
     position: relative;
     background-color: rgba(12, 12, 12, 0.6);
-    box-shadow: 0 8px 16px #32323c;
+    box-shadow: 0 4px 6px var(--color-shadow-primary);
     border-radius: 15px;
     padding: 73px;
-    margin-top: 129px;
     z-index: 1;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 200px;
+    margin: 250px 10% 150px;
 }
 
 .title {
     display: flex;
     justify-content: center;
     font-family: var(--font-roboto);
-    color: var(--color-text);
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
@@ -159,6 +155,8 @@
 @media screen and (max-width: 830px) {
     .container {
         background-color: transparent;
+        margin-bottom: 0;
+        margin-top: 0;
         padding-left: 0;
         padding-right: 0;
     }
