--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -11,7 +11,6 @@
     display: flex;
     justify-content: center;
     font-family: var(--font-roboto);
-    color: var(--color-text);
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
@@ -96,7 +95,7 @@ textarea:focus {
 
 button {
     padding: 10px;
-    background-color: var(--color-primary);
+    background-color: #576bbca8;
     color: white;
     border: none;
     border-radius: 10px;
@@ -106,7 +105,7 @@ button {
     font-size: 20px;
     width: 150px;
     margin: 25px;
-    box-shadow: 0 8px 16px #000000b3;
+    box-shadow: 0 8px 16px var(--color-shadow-primary);
 }
 
 button:active {
@@ -114,7 +113,8 @@ button:active {
 }
 
 button:hover {
-    background-color: #576bbca8;
+    background-color: #4f61a9a8;
+    font-size: 20px;
 }
 
 button:disabled {
