--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -2,16 +2,13 @@
 
 .container {
     color: var(--color-text);
-    margin-top: 79px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin: 79px 10% 150px;
 }
 
 .title {
     display: flex;
     justify-content: center;
     font-family: var(--font-roboto);
-    color: var(--color-text);
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 1.75px;
