--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -13,6 +13,7 @@
     z-index: 1000;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
     border: solid var(--color-primary);
+    border-width: 1px;
     opacity: 1;
 }
 
