--- a/src/components/Works/WorkCard.module.css
+++ b/src/components/Works/WorkCard.module.css
@@ -1,35 +1,22 @@
 @import '../../vars.css';
 
-.modalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-    transition: opacity 0.3s ease;
-}
-
-.modalContent {
-    background: var(--color-bg);
-    padding: 30px;
+.cardContent {
+    position: sticky;
+    background: #212126;
+    padding: 1.5rem 1rem 0 1rem;
     border-radius: 10px;
     width: 50%;
-    height: 90%;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: var(--color-text-secondary);
-    border: solid var(--color-primary);
     border-width: 1px;
+    box-shadow: 0 4px 6px var(--color-shadow-primary);
 }
 
-.modalHeader {
+.cardHeader {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,38 +25,37 @@
     border-width: 1px;
 }
 
-.modalHeader h3 {
+.cardHeader h3 {
     font-family: var(--font-roboto);
     font-size: 25px;
     margin-bottom: 5px;
 }
 
-.closeIcon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+.image {
+    aspect-ratio: 60 /25;
 }
 
 .description {
-    display: flex;
+    flex: 1;
     font-size: 20px;
+    align-items: center;
+    justify-content: center;
     margin-top: 15px;
     font-weight: 100;
     font-family: var(--font-roboto);
     color: var(--color-text-secondary);
-    padding-bottom: 25px;
+    padding: 15px 20px 0 20px;
     text-align: start;
 }
 
-.modalContent img {
+.cardContent img {
     width: 90%;
     height: 50%;
     object-fit: cover;
     margin-bottom: 15px;
 }
 
-.modalBody {
+.cardBody {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,7 +64,7 @@
     overflow-y: auto;
 }
 
-.modalFooter {
+.cardFooter {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -88,7 +74,7 @@
     width: 100%;
 }
 
-.modalContent ul {
+.cardContent ul {
     list-style: none;
     padding: 20px;
 }
@@ -98,7 +84,13 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    height: 100%;
+    height: 80%;
+    padding-bottom: 15px;
+}
+
+.skills p {
+    font-family: var(--font-roboto);
+    font-size: small;
 }
 
 .skills img {
@@ -117,57 +109,16 @@
 }
 
 .links a {
-    width: 100px;
-}
-
-.modalContent button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.navigationButton {
-    display: flex;
-    position: absolute;
-    top: 45%;
-    width: 50px;
-    height: 50px;
-    padding: 10px;
-    font-size: 60px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    color: var(--color-text-secondary);
-    background: transparent;
-    /*     transition: transform 0.4s ease; */
-}
-
-.navigationButton:hover {
-    transform: scale(1.2);
-    background: #1a1a1a;
-}
-
-.prevNavigation {
-    left: -8%;
-}
-
-.nextNavigation {
-    right: -8%;
+    width: 70px;
 }
 
 @media screen and (max-width: 830px) {
-    .modalContent {
-        width: 85%;
-        height: 95%;
-        padding: 25px;
+    .cardContent {
+        width: 100%;
+        height: 100%;
     }
 
-    .modalContent img {
+    .cardContent img {
         width: 90%;
         height: auto;
         object-fit: cover;
@@ -184,11 +135,11 @@
         width: 60px;
     }
 
-    .modalFooter {
+    .cardFooter {
         max-height: 60px;
     }
 
-    .modalContent ul {
+    .cardContent ul {
         list-style: none;
         padding: 15px;
     }
@@ -199,6 +150,7 @@
         align-items: center;
         text-align: center;
         height: 100%;
+        padding-bottom: 0;
     }
 
     .skills img {
@@ -208,35 +160,5 @@
 
     .skills p {
         display: none;
-    }
-
-    .navigationButton {
-        display: flex;
-        position: absolute;
-        top: 45%;
-        width: 50px;
-        height: 50px;
-        padding: 10px;
-        border: none;
-        font-size: 20px;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        color: var(--color-text-secondary);
-        background: transparent;
-    }
-
-    .navigationButton:hover {
-        transform: scale(1);
-        background: transparent;
-    }
-
-    .prevNavigation {
-        left: -12%;
-    }
-
-    .nextNavigation {
-        right: -12%;
     }
 }
