--- a/src/components/Works/Index/Works.module.css
+++ b/src/components/Works/Index/Works.module.css
@@ -1,3 +1,5 @@
+@import '../../../vars.css';
+
 .preContainer {
     position: relative;
     height: 100%;
@@ -39,58 +41,9 @@
     padding: 10px;
 }
 
-.navigationButton {
-    position: absolute;
-    top: 50%;
-    width: 50px;
-    height: 50px;
-    font-size: 60px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    color: var(--color-text-secondary);
-    background: transparent;
-    transition: transform 0.3s ease, color 0.3s ease;
-}
-
-.navigationButton:hover {
-    color: #5d5d5d;
-}
-
-.navigationButton.hidden {
-    opacity: 0.1;
-    pointer-events: none;
-    transform: scale(0.8);
-}
-
-.prevNavigation {
-    left: 20%;
-}
-
-.nextNavigation {
-    right: 20%;
-}
-
 @media screen and (max-width: 830px) {
     .projects {
         margin-left: 0;
         overflow-x: auto;
-    }
-
-    .navigationButton {
-        display: none;
-    }
-
-    .navigationButton:hover {
-        display: none;
-    }
-
-    .prevNavigation {
-        display: none;
-    }
-
-    .nextNavigation {
-        display: none;
     }
 }
