--- a/src/components/Works/Index/Works.module.css
+++ b/src/components/Works/Index/Works.module.css
@@ -41,6 +41,13 @@
     padding: 10px;
 }
 
+@media screen and (max-width: 1030px) {
+    .projects {
+        margin-left: 0;
+        overflow-y: hidden;
+    }
+}
+
 @media screen and (max-width: 830px) {
     .projects {
         margin-left: 0;
