--- a/src/components/Experience/Item/ExperienceItem.module.css
+++ b/src/components/Experience/Item/ExperienceItem.module.css
@@ -86,6 +86,33 @@
     font-weight: 500;
 }
 
+@media screen and (max-width: 1030px) {
+    .historyItemImgContainer {
+        display: none;
+    }
+
+    .historyItemDetails h3 {
+        font-size: 35px;
+        font-weight: 400;
+    }
+
+    .historyItemDetails h4 {
+        font-size: 35px;
+        font-weight: 300;
+    }
+
+    .historyItemDetails p {
+        font-size: 30px;
+        font-weight: 200;
+        color: var(--color-text-secondary);
+    }
+
+    .historyItemDetails ul {
+        font-size: 30px;
+        font-weight: 300;
+    }
+}
+
 @media screen and (max-width: 830px) {
     .historyItemDetails:hover {
         transform: none;
