--- a/src/components/Works/Item/WorkCard.module.css
+++ b/src/components/Works/Item/WorkCard.module.css
@@ -112,7 +112,7 @@
     width: 70px;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 1030px) {
     .cardContent {
         width: 100%;
         height: 100%;
@@ -126,9 +126,9 @@
     }
 
     .description {
-        font-size: 15px;
+        font-size: 25px;
         text-align: center;
-        padding: 0 15px;
+        padding: 0 15px 15px 0;
     }
 
     .links a {
