--- a/src/components/Works/Item/WorkCard.module.css
+++ b/src/components/Works/Item/WorkCard.module.css
@@ -162,3 +162,9 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 830px) {
+    .description {
+        font-size: 15px;
+    }
+}
