--- a/src/components/Works/Index/Works.module.css
+++ b/src/components/Works/Index/Works.module.css
@@ -20,7 +20,7 @@
     width: 100%;
     position: relative;
     display: flex;
-    overflow-x: auto;
+    overflow-x: hidden;
     margin-left: 25%;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
