--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -49,7 +49,7 @@
 .link a {
     color: var(--color-text);
     text-decoration: none;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 400;
     letter-spacing: 1.5px;
 }
@@ -60,7 +60,7 @@
     gap: 10px;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1030px) {
     .container ul {
         display: flex;
         flex-direction: row;
@@ -103,7 +103,7 @@
         max-width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
         justify-items: center;
     }
 
